--- a/index.html
+++ b/index.html
@@ -33,6 +33,82 @@
     </script>
     <script src="https://cdn.utmify.com.br/scripts/utms/latest.js" data-utmify-prevent-xcod-sck
         data-utmify-prevent-subids async defer></script>
+    <!-- TikTok Pixel Code Start -->
+    <script>
+        !function (w, d, t) {
+            w.TiktokAnalyticsObject = t; var ttq = w[t] = w[t] || []; ttq.methods = ["page", "track", "identify", "instances", "debug", "on", "off", "once", "ready", "alias", "group", "enableCookie", "disableCookie", "holdConsent", "revokeConsent", "grantConsent"], ttq.setAndDefer = function (t, e) { t[e] = function () { t.push([e].concat(Array.prototype.slice.call(arguments, 0))) } }; for (var i = 0; i < ttq.methods.length; i++)ttq.setAndDefer(ttq, ttq.methods[i]); ttq.instance = function (t) {
+                for (
+                    var e = ttq._i[t] || [], n = 0; n < ttq.methods.length; n++)ttq.setAndDefer(e, ttq.methods[n]); return e
+            }, ttq.load = function (e, n) {
+                var r = "https://analytics.tiktok.com/i18n/pixel/events.js", o = n && n.partner; ttq._i = ttq._i || {}, ttq._i[e] = [], ttq._i[e]._u = r, ttq._t = ttq._t || {}, ttq._t[e] = +new Date, ttq._o = ttq._o || {}, ttq._o[e] = n || {}; n = document.createElement("script")
+                    ; n.type = "text/javascript", n.async = !0, n.src = r + "?sdkid=" + e + "&lib=" + t; e = document.getElementsByTagName("script")[0]; e.parentNode.insertBefore(n, e)
+            };
+
+
+            ttq.load('D60EK2RC77U581RV6HMG');
+            ttq.page();
+
+            // Identify user (placeholders for PII)
+            ttq.identify({
+                "email": "<hashed_email_address>",
+                "phone_number": "<hashed_phone_number>",
+                "external_id": "<hashed_external_id>"
+            });
+
+            // Track page view content
+            ttq.track('ViewContent', {
+                "contents": [
+                    {
+                        "content_id": "alarme_mental_01",
+                        "content_type": "product",
+                        "content_name": "Alarme Mental",
+                        "content_category": "Digital Product",
+                        "price": 97.99,
+                        "num_items": 1,
+                        "brand": "Alarme Mental"
+                    }
+                ],
+                "value": 97.99,
+                "currency": "BRL"
+            });
+
+            // Track InitiateCheckout and AddToCart on CTA clicks
+            window.addEventListener('DOMContentLoaded', () => {
+                const checkoutLinks = document.querySelectorAll('a[href*="pay.cakto.com.br"]');
+                checkoutLinks.forEach(link => {
+                    link.addEventListener('click', () => {
+                        ttq.track('InitiateCheckout', {
+                            "contents": [
+                                {
+                                    "content_id": "alarme_mental_01",
+                                    "content_type": "product",
+                                    "content_name": "Alarme Mental",
+                                    "price": 97.99,
+                                    "num_items": 1
+                                }
+                            ],
+                            "value": 97.99,
+                            "currency": "BRL"
+                        });
+                        ttq.track('AddToCart', {
+                            "contents": [
+                                {
+                                    "content_id": "alarme_mental_01",
+                                    "content_type": "product",
+                                    "content_name": "Alarme Mental",
+                                    "price": 97.99,
+                                    "num_items": 1
+                                }
+                            ],
+                            "value": 97.99,
+                            "currency": "BRL"
+                        });
+                    });
+                });
+            });
+        }(window, document, 'ttq');
+    </script>
+    <!-- TikTok Pixel Code End -->
 </head>
 
 <body>
