--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alarme Mental - Ativação Neural</title>
     <meta name="description"
-        content="O método definitivo para homens que precisam produzir mais. Ative seu cérebro em 3 minutos.">
+        content="O método definitivo para quem precisa produzir mais. Ative seu cérebro em 3 minutos.">
     <meta name="facebook-domain-verification" content="ftig77t12bzml739wy2b1l1cw93zoa" />
 
     <!-- Fonts -->
@@ -63,12 +63,12 @@
                         "content_type": "product",
                         "content_name": "Alarme Mental",
                         "content_category": "Digital Product",
-                        "price": 97.99,
+                        "price": 77.00,
                         "num_items": 1,
                         "brand": "Alarme Mental"
                     }
                 ],
-                "value": 97.99,
+                "value": 77.00,
                 "currency": "BRL"
             });
 
@@ -84,12 +84,12 @@
                                     "content_type": "product",
                                     "content_name": "Alarme Mental",
                                     "content_category": "Digital Product",
-                                    "price": 97.99,
+                                    "price": 77.00,
                                     "num_items": 1,
                                     "brand": "Alarme Mental"
                                 }
                             ],
-                            "value": 97.99,
+                            "value": 77.00,
                             "currency": "BRL"
                         });
                     });
@@ -112,15 +112,14 @@
             </div>
 
             <h1 class="main-headline">
-                VOCÊ SABE EXATAMENTE O QUE PRECISA FAZER.
+                VOCÊ SABE O QUE PRECISA SER FEITO.
             </h1>
             <h2 class="sub-headline">
-                MAS NÃO CONSEGUE DAR O PRIMEIRO PASSO.
+                MAS SEU CÉREBRO PARECE ESTAR "TRAVADO".
             </h2>
             <p class="hero-text">
-                Existe uma "trava química" no cérebro de homens e mulheres entre 25 e 55 anos que impede o progresso
-                financeiro.
-                <br>Descubra como quebrá-la já na <strong>Primeira Aula</strong>.
+                Existe uma barreira invisível que sabota sua produtividade e impede seu progresso financeiro.
+                <br>Descubra como quebrá-la e ativar seu foco máximo já na <strong>Primeira Aula</strong>.
             </p>
 
             <a href="#symptoms" class="cta-button pulse">
@@ -185,14 +184,14 @@
                     <div class="mech-step">
                         <span class="mech-number">1</span>
                         <h4>O Problema: Resistência Dopaminérgica</h4>
-                        <p>Depois dos 30, o estresse reduz seus receptores de dopamina. Sem dopamina, não há MOTIVAÇÃO
-                            para começar tarefas difíceis.</p>
+                        <p>O estresse e o excesso de informação reduzem seus receptores de dopamina. Sem isso, não há
+                            impulsividade saudável para começar tarefas difíceis.</p>
                     </div>
                     <div class="mech-step">
                         <span class="mech-number">2</span>
                         <h4>A Solução: Engenharia Sonora</h4>
-                        <p>O Alarme Mental usa frequências específicas que "hackeiam" a amígdala cerebral, desligando o
-                            medo e ativando o Córtex Pré-Frontal (foco).</p>
+                        <p>O Alarme Mental usa frequências específicas que "hackeiam" o sistema límbico, silenciando a
+                            procrastinação e ativando o foco absoluto.</p>
                     </div>
                 </div>
 
@@ -282,39 +281,39 @@
                     <div class="stars">⭐⭐⭐⭐⭐</div>
                     <p>"Eu não acreditava. Mas no DIA 2 já estava fazendo tarefas que evitava há SEMANAS. Terminei 3
                         projetos em 1 semana."</p>
-                    <strong>Ricardo M., 32 anos</strong>
+                    <strong>Ricardo M.</strong>
                 </div>
                 <div class="testi-card">
                     <div class="stars">⭐⭐⭐⭐⭐</div>
                     <p>"Sensação de desbloqueio TOTAL. É como se tirassem um peso gigante da cabeça. Consigo focar 5h
                         seguidas agora."</p>
-                    <strong>Ana Paula, 28 anos</strong>
+                    <strong>Ana Paula</strong>
                 </div>
                 <div class="testi-card">
                     <div class="stars">⭐⭐⭐⭐⭐</div>
                     <p>"Minha renda DOBROU em 30 dias porque parei de procrastinar. Simples e direto ao ponto."</p>
-                    <strong>Carlos Eduardo, 35 anos</strong>
+                    <strong>Carlos Eduardo</strong>
                 </div>
                 <!-- New Testimonial 4 -->
                 <div class="testi-card">
                     <div class="stars">⭐⭐⭐⭐⭐</div>
                     <p>"Eu estudava, estudava e não lembrava de nada. Depois do módulo 2, meu foco nos estudos para
                         concurso mudou 100%. Aprovada!"</p>
-                    <strong>Mariana S., 29 anos</strong>
+                    <strong>Mariana S.</strong>
                 </div>
                 <!-- New Testimonial 5 -->
                 <div class="testi-card">
                     <div class="stars">⭐⭐⭐⭐⭐</div>
-                    <p>"Sou TDAH e sempre achei que precisava de remédio. O Alarme Mental me ensinou a usar meu cérebro
+                    <p>"Sempre achei que precisava de remédio para focar. O Alarme Mental me ensinou a usar meu cérebro
                         do jeito certo. Incrível."</p>
-                    <strong>Felipe Costa, 42 anos</strong>
+                    <strong>Felipe Costa</strong>
                 </div>
                 <!-- New Testimonial 6 -->
                 <div class="testi-card">
                     <div class="stars">⭐⭐⭐⭐⭐</div>
-                    <p>"O protocolo de 'Deadline em Pânico' salvou meu emprego. Entreguei um relatório gigante em 3
+                    <p>"O protocolo de 'Deadline em Pânico' salvou meu trabalho. Entreguei um relatório gigante em 3
                         horas usando a técnica."</p>
-                    <strong>Juliana B., 34 anos</strong>
+                    <strong>Juliana B.</strong>
                 </div>
             </div>
         </div>
@@ -338,8 +337,8 @@
             <div class="offer-box-final">
                 <p class="old-price">De R$ 497,90</p>
                 <p class="offer-label">POR APENAS:</p>
-                <div class="final-price">R$ 97,99</div>
-                <p class="installments">ou 12x de R$ 11,28</p>
+                <div class="final-price">R$ 77,00</div>
+                <p class="installments">ou 12x de R$ 8,86</p>
 
                 <a href="https://pay.cakto.com.br/b7ojhu5_505857" class="cta-button pulse-fast">
                     QUERO DESTRAVAR AGORA
