--- a/index.html
+++ b/index.html
@@ -111,19 +111,24 @@
                 <span class="neon-line"></span>
             </div>
 
+            <div class="badge-low-friction">
+                <i class="fas fa-bolt"></i> ATIVAÇÃO IMEDIATA (SEM ESFORÇO)
+            </div>
+
             <h1 class="main-headline">
-                VOCÊ SABE O QUE PRECISA SER FEITO.
+                O "ERRO DE SISTEMA" NO SEU CÉREBRO QUE TE OBRIGA A PROCRASTINAR.
             </h1>
             <h2 class="sub-headline">
-                MAS SEU CÉREBRO PARECE ESTAR "TRAVADO".
+                (E COMO DESLIGÁ-LO EM APENAS 3 MINUTOS)
             </h2>
             <p class="hero-text">
-                Existe uma barreira invisível que sabota sua produtividade e impede seu progresso financeiro.
-                <br>Descubra como quebrá-la e ativar seu foco máximo já na <strong>Primeira Aula</strong>.
+                Pare de lutar contra a sua própria mente usando "força de vontade".
+                <br>Descubra o interruptor biológico que ativa seu foco máximo <strong>sem que você precise se
+                    esforçar</strong>.
             </p>
 
             <a href="#symptoms" class="cta-button pulse">
-                QUERO DESTRAVAR AGORA <i class="fas fa-lock-open"></i>
+                QUERO ATIVAR MEU FOCO <i class="fas fa-lock-open"></i>
             </a>
         </div>
     </header>
@@ -190,13 +195,14 @@
                     <div class="mech-step">
                         <span class="mech-number">2</span>
                         <h4>A Solução: Engenharia Sonora</h4>
-                        <p>O Alarme Mental usa frequências específicas que "hackeiam" o sistema límbico, silenciando a
-                            procrastinação e ativando o foco absoluto.</p>
+                        <p>O Alarme Mental usa frequências específicas que "hackeiam" o sistema límbico. Você não
+                            precisa "tentar focar" — o som faz o trabalho pesado por você, silenciando a procrastinação.
+                        </p>
                     </div>
                 </div>
 
                 <a href="#target" class="cta-button-small">
-                    QUERO ATIVAR MEU CÉREBRO
+                    TESTAR ATIVAÇÃO AGORA
                 </a>
             </div>
         </div>
@@ -272,6 +278,32 @@
         </div>
     </section>
 
+    <!-- COST OF INACTION SECTION -->
+    <section class="cost-section">
+        <div class="container">
+            <h2 class="section-title-red">O PREÇO QUE VOCÊ PAGA POR ADIAR...</h2>
+            <div class="cost-grid">
+                <div class="cost-card">
+                    <i class="fas fa-money-bill-wave"></i>
+                    <h3>Dinheiro na Mesa</h3>
+                    <p>Cada dia procrastinado é um dia sem faturar o que você realmente merece. <span
+                            class="highlight-gold">Quanto custa seu silêncio financeiro?</span></p>
+                </div>
+                <div class="cost-card">
+                    <i class="fas fa-hourglass-end"></i>
+                    <h3>Tempo Perdido</h3>
+                    <p>O tempo não volta. São horas que você poderia estar com sua família, mas está "travado" na frente
+                        do PC.</p>
+                </div>
+                <div class="cost-card">
+                    <i class="fas fa-user-shield"></i>
+                    <h3>Autoestima em Queda</h3>
+                    <p>A sensação de fracasso por não terminar o que começou destrói sua confiança dia após dia.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- TESTIMONIALS -->
     <section class="testimonials-section">
         <div class="container">
@@ -341,7 +373,7 @@
                 <p class="installments">ou 12x de R$ 8,86</p>
 
                 <a href="https://pay.cakto.com.br/b7ojhu5_505857" class="cta-button pulse-fast">
-                    QUERO DESTRAVAR AGORA
+                    QUERO ATIVAR MEU FOCO AGORA
                 </a>
 
                 <div class="payment-methods">
