--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
                         "content_type": "product",
                         "content_name": "Alarme Mental",
                         "content_category": "Digital Product",
-                        "price": 77.00,
+                        "price": 97.00,
                         "num_items": 1,
                         "brand": "Alarme Mental"
                     }
                 ],
-                "value": 77.00,
+                "value": 97.00,
                 "currency": "BRL"
             });
 
@@ -84,12 +84,12 @@
                                     "content_type": "product",
                                     "content_name": "Alarme Mental",
                                     "content_category": "Digital Product",
-                                    "price": 77.00,
+                                    "price": 97.00,
                                     "num_items": 1,
                                     "brand": "Alarme Mental"
                                 }
                             ],
-                            "value": 77.00,
+                            "value": 97.00,
                             "currency": "BRL"
                         });
                     });
@@ -116,23 +116,22 @@
             </div>
 
             <h1 class="main-headline">
-                VOCÊ NÃO ESTÁ CANSADO.<br>
-                <span style="color: var(--neon-green)">VOCÊ ESTÁ NEUROLOGICAMENTE TRAVADO.</span>
+                CANSADO DE PROCRASTINAR?<br>
+                <span style="color: var(--neon-green)">ATIVE SEU FOCO IMEDIATO COM UM MÉTODO DE 3 MINUTOS.</span>
             </h1>
 
             <h2 class="sub-headline">
-                Existe um modo de defesa ativado no seu cérebro que bloqueia ação. E você pode desligar isso em 3
-                minutos.
+                Domine seu dia e recupere sua produtividade sem precisar de força de vontade ou técnicas exaustivas.
             </h2>
 
             <a href="https://pay.cakto.com.br/b7ojhu5_505857" class="cta-button pulse">
-                QUERO DESTRAVAR AGORA
+                QUERO DOBRAR MINHA PRODUTIVIDADE
             </a>
 
             <div class="trust-signals">
-                <span><i class="fas fa-users"></i> +2.847 pessoas ativadas</span>
-                <span class="stars">⭐⭐⭐⭐⭐ 4.9</span>
-                <span><i class="fas fa-shield-alt"></i> Garantia 30 dias</span>
+                <span><i class="fas fa-users"></i> +2.847 Alunos Ativos</span>
+                <span class="stars">⭐⭐⭐⭐⭐ 4.9/5 Trustvox</span>
+                <span><i class="fas fa-shield-alt"></i> Garantia Incondicional 30 dias</span>
             </div>
         </div>
     </header>
@@ -207,7 +206,7 @@
                 <p class="activation-subtitle">Reset do ciclo em 3 minutos</p>
                 <br>
                 <a href="https://pay.cakto.com.br/b7ojhu5_505857" class="cta-button">
-                    QUERO DESTRAVAR MEU CÉREBRO
+                    SIM, QUERO PARAR DE PROCRASTINAR
                 </a>
             </div>
         </div>
@@ -235,29 +234,87 @@
 
             <div class="testimonials-grid">
                 <div class="testimonial-card">
+                    <div class="author-photo">
+                        <img src="https://ui-avatars.com/api/?name=Ricardo+Moraes&background=00ff88&color=000"
+                            alt="Ricardo Moraes">
+                    </div>
                     <p class="testimonial-text">"Eu não acreditava. Mas no DIA 2 já estava fazendo tarefas que evitava
                         há SEMANAS. Terminei 3 projetos em 1 semana."</p>
                     <div class="testimonial-author">
                         <div class="author-info">
-                            <strong>Ricardo M.</strong>
+                            <strong>Ricardo Moraes</strong>
+                            <span class="author-status">Empresário</span>
                         </div>
                     </div>
                 </div>
                 <div class="testimonial-card">
+                    <div class="author-photo">
+                        <img src="https://ui-avatars.com/api/?name=Ana+Paula+Silva&background=00ff88&color=000"
+                            alt="Ana Paula Silva">
+                    </div>
                     <p class="testimonial-text">"Sensação de desbloqueio TOTAL. É como se tirassem um peso gigante da
                         cabeça. Consigo focar 5h seguidas agora."</p>
                     <div class="testimonial-author">
                         <div class="author-info">
-                            <strong>Ana Paula</strong>
+                            <strong>Ana Paula Silva</strong>
+                            <span class="author-status">Freelancer</span>
                         </div>
                     </div>
                 </div>
                 <div class="testimonial-card">
+                    <div class="author-photo">
+                        <img src="https://ui-avatars.com/api/?name=Carlos+Eduardo&background=00ff88&color=000"
+                            alt="Carlos Eduardo">
+                    </div>
                     <p class="testimonial-text">"Minha renda DOBROU em 30 dias porque parei de procrastinar. Simples e
                         direto ao ponto."</p>
                     <div class="testimonial-author">
                         <div class="author-info">
-                            <strong>Carlos Eduardo</strong>
+                            <strong>Carlos Eduardo Santos</strong>
+                            <span class="author-status">Desenvolvedor</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- PRODUCT PREVIEW SECTION -->
+    <section id="preview" class="preview-section">
+        <div class="container">
+            <h2 class="section-title">Veja por dentro da <span style="color: var(--neon-green)">Área de Membros</span>
+            </h2>
+            <div class="preview-container">
+                <div class="video-container">
+                    <div style="padding:177.77% 0 0 0;position:relative;">
+                        <iframe
+                            src="https://player.vimeo.com/video/1152720920?h=5f84f04586&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+                            frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write"
+                            style="position:absolute;top:0;left:0;width:100%;height:100%;"
+                            title="Alarme Mental Preview">
+                        </iframe>
+                    </div>
+                </div>
+                <div class="modules-list">
+                    <div class="module-item">
+                        <span class="module-num">01</span>
+                        <div class="module-info">
+                            <h4>Módulo 1: O Reset Cerebral</h4>
+                            <p>Como desligar o modo de autoproteção que gera a paralisia.</p>
+                        </div>
+                    </div>
+                    <div class="module-item">
+                        <span class="module-num">02</span>
+                        <div class="module-info">
+                            <h4>Módulo 2: Ativação em 3 Minutos</h4>
+                            <p>A técnica prática para entrar em estado de fluxo imediato.</p>
+                        </div>
+                    </div>
+                    <div class="module-item">
+                        <span class="module-num">03</span>
+                        <div class="module-info">
+                            <h4>Módulo 3: O Ritmo da Execução</h4>
+                            <p>Construindo uma rotina que não depende de motivação.</p>
                         </div>
                     </div>
                 </div>
@@ -295,17 +352,19 @@
                 <div class="bonus-card">
                     <div class="bonus-tag">Bônus 1</div>
                     <h4>🚨 Protocolo "Deadline em Pânico"</h4>
-                    <p>Destrava em 5 minutos quando o prazo está estourando.</p>
+                    <p>Checklist em PDF: O Protocolo de 5 Passos para Destravar Tarefas Urgentes em Menos de 5 Minutos.
+                    </p>
                 </div>
                 <div class="bonus-card">
                     <div class="bonus-tag">Bônus 2</div>
                     <h4>📁 Projetos Abandonados</h4>
-                    <p>Retome e finalize o que você deixou de lado há meses.</p>
+                    <p>Guia Prático: Como Resgatar Projetos Engavetados sem se Sentir Sobrecarregado.</p>
                 </div>
                 <div class="bonus-card">
                     <div class="bonus-tag">Bônus 3</div>
-                    <h4>💰 Procrastinação Financeira</h4>
-                    <p>Protocolo para tarefas que trazem lucro real imediato.</p>
+                    <h4>💰 Ativação Financeira</h4>
+                    <p>Planilha de Ativação Financeira: O Método para Focar no que Realmente Traz Lucro Real Imediato.
+                    </p>
                 </div>
             </div>
         </div>
@@ -347,12 +406,17 @@
                     <p
                         style="font-size: 18px; text-transform: uppercase; font-weight: 700; color: var(--color-text-dim);">
                         Hoje tudo incluso por:</p>
-                    <div class="offer-price">R$ 77</div>
-                    <div class="offer-installments">12x de R$ 8,70</div>
+                    <div class="offer-price">R$ 97</div>
+                    <div class="offer-installments">12x de R$ 10,96</div>
+                </div>
+
+                <div class="scarcity-timer">
+                    <p>A oferta expira em:</p>
+                    <div id="countdown" class="timer-display">15:00</div>
                 </div>
 
                 <a href="https://pay.cakto.com.br/b7ojhu5_505857" class="cta-button pulse cta-full">
-                    QUERO ATIVAR MEU FOCO AGORA
+                    GARANTIR MEU ACESSO COM DESCONTO
                 </a>
 
                 <div class="security-badges">
@@ -367,6 +431,29 @@
                 <h3>Garantia Blindada de 30 Dias</h3>
                 <p>Teste o método. Se você não sentir uma mudança radical na sua produtividade e capacidade de execução,
                     nós devolvemos 100% do seu investimento sem perguntas.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- AUTHOR SECTION -->
+    <section id="author" class="author-section">
+        <div class="container">
+            <div class="author-container">
+                <div class="author-bio-photo">
+                    <img src="victor_martins.jpg" alt="Victor Martins">
+                </div>
+                <div class="author-content">
+                    <h2 class="section-title" style="text-align: left; margin-bottom: 20px;">Sobre o <span
+                            style="color: var(--neon-green)">Autor</span></h2>
+                    <p style="color: #fff; margin-bottom: 20px;">Olá, eu sou Victor Martins, especialista em
+                        neurociência
+                        aplicada à produtividade. Após anos estudando como o cérebro humano processa o esforço e a
+                        recompensa, desenvolvi o método Alarme Mental para ajudar pessoas comuns a recuperarem o
+                        controle sobre sua própria execução.</p>
+                    <p>Meu objetivo é simples: te dar as ferramentas para que você pare de lutar contra si mesmo e
+                        comece a agir de forma natural, consistente e sem sofrimento. Já ajudei mais de 2.800 alunos a
+                        destravarem seu potencial máximo.</p>
+                </div>
             </div>
         </div>
     </section>
