--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 Domine seu dia e recupere sua produtividade sem precisar de força de vontade ou técnicas exaustivas.
             </h2>
 
-            <a href="https://pay.cakto.com.br/b7ojhu5_505857" class="cta-button pulse">
+            <a href="#offer" class="cta-button pulse">
                 QUERO DOBRAR MINHA PRODUTIVIDADE
             </a>
 
@@ -205,7 +205,7 @@
                 <h2 class="activation-title">ATIVAÇÃO NEURAL</h2>
                 <p class="activation-subtitle">Reset do ciclo em 3 minutos</p>
                 <br>
-                <a href="https://pay.cakto.com.br/b7ojhu5_505857" class="cta-button">
+                <a href="#offer" class="cta-button">
                     SIM, QUERO PARAR DE PROCRASTINAR
                 </a>
             </div>
