--- a/index.html
+++ b/index.html
@@ -117,15 +117,29 @@
 
             <h1 class="main-headline">
                 CANSADO DE PROCRASTINAR?<br>
-                <span style="color: var(--neon-green)">ATIVE SEU FOCO IMEDIATO COM UM MÉTODO DE 3 MINUTOS.</span>
+                <span style="color: var(--neon-green)">ATIVE SEU FOCO IMEDIATO EM 3 MINUTOS.</span>
             </h1>
 
             <h2 class="sub-headline">
-                Domine seu dia e recupere sua produtividade sem precisar de força de vontade ou técnicas exaustivas.
+                Domine seu dia e recupere sua produtividade com o método de ativação neural que já ajudou +2.800
+                pessoas.
             </h2>
 
+            <div class="hero-video-wrapper">
+                <div class="video-container">
+                    <div style="padding:177.77% 0 0 0;position:relative;">
+                        <iframe
+                            src="https://player.vimeo.com/video/1152720920?h=5f84f04586&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+                            frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write"
+                            style="position:absolute;top:0;left:0;width:100%;height:100%;"
+                            title="Alarme Mental Preview">
+                        </iframe>
+                    </div>
+                </div>
+            </div>
+
             <a href="#offer" class="cta-button pulse">
-                QUERO DOBRAR MINHA PRODUTIVIDADE
+                QUERO ATIVAR MEU FOCO AGORA
             </a>
 
             <div class="trust-signals">
@@ -135,6 +149,79 @@
             </div>
         </div>
     </header>
+
+    <!-- SOCIAL PROOF SECTION -->
+    <section id="results" class="social-proof-section">
+        <div class="container">
+            <h2 class="section-title">Resultados de quem já ativou</h2>
+
+            <div class="stats-grid">
+                <div class="stat-card">
+                    <span class="stat-value">94,7%</span>
+                    <span class="stat-label">relatam ação nos primeiros 7 dias</span>
+                </div>
+                <div class="stat-card">
+                    <span class="stat-value">3 min</span>
+                    <span class="stat-label">para sentir diferença</span>
+                </div>
+                <div class="stat-card">
+                    <span class="stat-value">21 dias</span>
+                    <span class="stat-label">para nova identidade</span>
+                </div>
+            </div>
+
+            <div class="testimonials-grid">
+                <div class="testimonial-card">
+                    <div class="author-photo">
+                        <img src="https://ui-avatars.com/api/?name=Ricardo+Moraes&background=00ff88&color=000"
+                            alt="Ricardo Moraes" loading="lazy">
+                    </div>
+                    <p class="testimonial-text">"Eu não acreditava. Mas no DIA 2 já estava fazendo tarefas que evitava
+                        há SEMANAS. Terminei 3 projetos em 1 semana."</p>
+                    <div class="testimonial-author">
+                        <div class="author-info">
+                            <strong>Ricardo Moraes</strong>
+                            <span class="author-status">Empresário</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonial-card">
+                    <div class="author-photo">
+                        <img src="https://ui-avatars.com/api/?name=Ana+Paula+Silva&background=00ff88&color=000"
+                            alt="Ana Paula Silva" loading="lazy">
+                    </div>
+                    <p class="testimonial-text">"Sensação de desbloqueio TOTAL. É como se tirassem um peso gigante da
+                        cabeça. Consigo focar 5h seguidas agora."</p>
+                    <div class="testimonial-author">
+                        <div class="author-info">
+                            <strong>Ana Paula Silva</strong>
+                            <span class="author-status">Freelancer</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonial-card">
+                    <div class="author-photo">
+                        <img src="https://ui-avatars.com/api/?name=Carlos+Eduardo&background=00ff88&color=000"
+                            alt="Carlos Eduardo" loading="lazy">
+                    </div>
+                    <p class="testimonial-text">"Minha renda DOBROU em 30 dias porque parei de procrastinar. Simples e
+                        direto ao ponto."</p>
+                    <div class="testimonial-author">
+                        <div class="author-info">
+                            <strong>Carlos Eduardo Santos</strong>
+                            <span class="author-status">Desenvolvedor</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="center-text" style="margin-top: 50px;">
+                <a href="https://pay.cakto.com.br/b7ojhu5_505857" class="cta-button pulse">
+                    SIM! QUERO ESSES RESULTADOS
+                </a>
+            </div>
+        </div>
+    </section>
 
     <!-- IDENTIFICATION SECTION -->
     <section id="identification" class="identification-section">
@@ -212,88 +299,16 @@
         </div>
     </section>
 
-    <!-- SOCIAL PROOF SECTION -->
-    <section id="results" class="social-proof-section">
-        <div class="container">
-            <h2 class="section-title">Resultados de quem já ativou</h2>
-
-            <div class="stats-grid">
-                <div class="stat-card">
-                    <span class="stat-value">94,7%</span>
-                    <span class="stat-label">relatam ação nos primeiros 7 dias</span>
-                </div>
-                <div class="stat-card">
-                    <span class="stat-value">3 min</span>
-                    <span class="stat-label">para sentir diferença</span>
-                </div>
-                <div class="stat-card">
-                    <span class="stat-value">21 dias</span>
-                    <span class="stat-label">para nova identidade</span>
-                </div>
-            </div>
-
-            <div class="testimonials-grid">
-                <div class="testimonial-card">
-                    <div class="author-photo">
-                        <img src="https://ui-avatars.com/api/?name=Ricardo+Moraes&background=00ff88&color=000"
-                            alt="Ricardo Moraes">
-                    </div>
-                    <p class="testimonial-text">"Eu não acreditava. Mas no DIA 2 já estava fazendo tarefas que evitava
-                        há SEMANAS. Terminei 3 projetos em 1 semana."</p>
-                    <div class="testimonial-author">
-                        <div class="author-info">
-                            <strong>Ricardo Moraes</strong>
-                            <span class="author-status">Empresário</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="testimonial-card">
-                    <div class="author-photo">
-                        <img src="https://ui-avatars.com/api/?name=Ana+Paula+Silva&background=00ff88&color=000"
-                            alt="Ana Paula Silva">
-                    </div>
-                    <p class="testimonial-text">"Sensação de desbloqueio TOTAL. É como se tirassem um peso gigante da
-                        cabeça. Consigo focar 5h seguidas agora."</p>
-                    <div class="testimonial-author">
-                        <div class="author-info">
-                            <strong>Ana Paula Silva</strong>
-                            <span class="author-status">Freelancer</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="testimonial-card">
-                    <div class="author-photo">
-                        <img src="https://ui-avatars.com/api/?name=Carlos+Eduardo&background=00ff88&color=000"
-                            alt="Carlos Eduardo">
-                    </div>
-                    <p class="testimonial-text">"Minha renda DOBROU em 30 dias porque parei de procrastinar. Simples e
-                        direto ao ponto."</p>
-                    <div class="testimonial-author">
-                        <div class="author-info">
-                            <strong>Carlos Eduardo Santos</strong>
-                            <span class="author-status">Desenvolvedor</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- PRODUCT PREVIEW SECTION -->
+    <!-- PRODUCT PREVIEW SECTION (REMOVED VIDEO FROM HERE AS IT IS NOW IN HERO) -->
     <section id="preview" class="preview-section">
         <div class="container">
             <h2 class="section-title">Veja por dentro da <span style="color: var(--neon-green)">Área de Membros</span>
             </h2>
             <div class="preview-container">
-                <div class="video-container">
-                    <div style="padding:177.77% 0 0 0;position:relative;">
-                        <iframe
-                            src="https://player.vimeo.com/video/1152720920?h=5f84f04586&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
-                            frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write"
-                            style="position:absolute;top:0;left:0;width:100%;height:100%;"
-                            title="Alarme Mental Preview">
-                        </iframe>
-                    </div>
+                <div class="modules-images">
+                    <img src="https://placehold.co/600x400/111/00ff88?text=Area+de+Membros+Alarme+Mental"
+                        alt="Area de Membros"
+                        style="width: 100%; border-radius: 20px; border: 1px solid var(--neon-green);">
                 </div>
                 <div class="modules-list">
                     <div class="module-item">
@@ -440,7 +455,7 @@
         <div class="container">
             <div class="author-container">
                 <div class="author-bio-photo">
-                    <img src="victor_martins.jpg" alt="Victor Martins">
+                    <img src="victor_martins.jpg" alt="Victor Martins" loading="lazy">
                 </div>
                 <div class="author-content">
                     <h2 class="section-title" style="text-align: left; margin-bottom: 20px;">Sobre o <span
@@ -491,6 +506,13 @@
             </details>
         </div>
     </section>
+
+    <!-- FLOATING CTA FOR MOBILE -->
+    <div id="floating-cta" class="floating-cta">
+        <a href="https://pay.cakto.com.br/b7ojhu5_505857" class="cta-button pulse-fast">
+            ATIVE SEU FOCO AGORA
+        </a>
+    </div>
 
     <footer>
         <p>&copy; 2026 Alarme Mental. Todos os direitos reservados.</p>
